--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,13 @@ dist: trusty
 
 addons:
   chrome: stable
+  apt:
+    packages:
+    - poppler-utils
 cache:
   bundler: true
 
 before_install:
-  - sudo apt-get install -y poppler-utils
   - gem update --system
   - gem install bundler
   - google-chrome-stable --headless --disable-gpu --no-sandbox --remote-debugging-port=9222 http://localhost &
