OpenJPEG (1.x) tools for Travis-CI.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ addons:
     - graphicsmagick
     - imagemagick
     - libreoffice
+    - openjpeg-tools
     - poppler-utils
     - tesseract-ocr
 cache:
