--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: ruby
-dist: trusty
+dist: xenial
 
 addons:
   chrome: stable
   apt:
     sources:
-      - "trusty-media"
+      - "xenial-media"
     packages:
     - ghostscript
     - graphicsmagick
@@ -18,9 +18,10 @@ cache:
 
 before_install:
   # OpenJPEG 2000 2.x backport PPA
-  - sudo add-apt-repository ppa:aacid/openjp2trusty -y
+  # openjp2 is fully supported in Ubuntu 16.04 LTS
+  # - sudo add-apt-repository ppa:aacid/openjp2trusty -y
   - sudo apt-get update -q
-  - sudo apt-get install libopenjp2-tools -y
+  # - sudo apt-get install libopenjp2-tools -y
   - gem update --system
   - gem install bundler
   - google-chrome-stable --headless --disable-gpu --no-sandbox --remote-debugging-port=9222 http://localhost &
@@ -31,7 +32,7 @@ before_install:
   - sudo wget -q -O /etc/ImageMagick/policy.xml https://raw.githubusercontent.com/marriott-library/newspaper_works/7052ff3bf58022572870a0720d8c5a705090a833/config/vendor/imagemagick-6-policy.xml
 
 rvm:
-  - 2.5.0
+  - 2.5.3
 
 env:
   global:
@@ -42,8 +43,8 @@ env:
   # It should be sufficient to test only the latest of the patch versions for a minor version, they
   # should be compatible across patch versions (only bug fixes are released in patch versions).
   matrix:
-    - "RAILS_VERSION=5.0.6"
-    - "RAILS_VERSION=5.1.4"
+    - "RAILS_VERSION=5.1.6"
+    - "RAILS_VERSION=5.0.7"
 
 services:
   - redis-server
