--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ before_install:
   - sudo chmod +x /opt/install/fits-1.3.0/*.sh
   - sudo ln -s /opt/install/fits-1.3.0/fits.sh /usr/local/bin/fits.sh
   - sudo wget -q -O /etc/ImageMagick-6/policy.xml https://raw.githubusercontent.com/marriott-library/newspaper_works/7052ff3bf58022572870a0720d8c5a705090a833/config/vendor/imagemagick-6-policy.xml
-
+  - sudo wget -q -O /opt/install/fits-1.3.0/xml/fits.xml https://gist.github.com/1fa030b4eb6c5904b9bda9bbd3ff91a7.git
 rvm:
   - 2.5.3
 
