--- a/.travis.yml
+++ b/.travis.yml
@@ -22,11 +22,7 @@ cache:
   bundler: true
 
 before_install:
-  # OpenJPEG 2000 2.x backport PPA
-  # openjp2 is fully supported in Ubuntu 16.04 LTS
-  # - sudo add-apt-repository ppa:aacid/openjp2trusty -y
   - sudo apt-get update -q
-  # - sudo apt-get install libopenjp2-tools -y
   - gem update --system
   - gem install bundler
   - google-chrome-stable --headless --disable-gpu --no-sandbox --remote-debugging-port=9222 http://localhost &
@@ -35,7 +31,7 @@ before_install:
   - sudo chmod +x /opt/install/fits-1.3.0/*.sh
   - sudo ln -s /opt/install/fits-1.3.0/fits.sh /usr/local/bin/fits.sh
   - sudo wget -q -O /etc/ImageMagick-6/policy.xml https://raw.githubusercontent.com/marriott-library/newspaper_works/7052ff3bf58022572870a0720d8c5a705090a833/config/vendor/imagemagick-6-policy.xml
-  - sudo wget -q -O /opt/install/fits-1.3.0/xml/fits.xml https://gist.github.com/1fa030b4eb6c5904b9bda9bbd3ff91a7.git
+  - sudo wget -q -O /opt/install/fits-1.3.0/xml/fits.xml d84eca9a9a170f8f/raw/ebb1a285726e4f5c2309b4f6eceed29fa1369538/fits.xml
 rvm:
   - 2.5.3
 
@@ -53,4 +49,3 @@ env:
 
 services:
   - redis
-#before_script:
