Travis modifications to run CI in Ubuntu 18.04

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,12 @@
 language: ruby
-dist: xenial
-
-jdk:
-  - openjdk8
+dist: bionic
 
 addons:
   chrome: stable
   apt:
-    sources:
-      - "xenial-media"
     packages:
+    - google-chrome-stable
+    - openjdk-8-jre-headless
     - ghostscript
     - graphicsmagick
     - imagemagick
@@ -23,6 +20,8 @@ cache:
 
 before_install:
   - sudo apt-get update -q
+  - sudo apt-get remove --yes openjdk-11-jdk openjdk-11-jdk-headless
+  - sudo update-alternatives --set java /usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java
   - gem update --system
   - gem install bundler
   - google-chrome-stable --headless --disable-gpu --no-sandbox --remote-debugging-port=9222 http://localhost &
@@ -30,7 +29,7 @@ before_install:
   - sudo unzip /opt/install/fits-1.4.1.zip -d /opt/install/fits-1.4.1
   - sudo chmod +x /opt/install/fits-1.4.1/*.sh
   - sudo ln -s /opt/install/fits-1.4.1/fits.sh /usr/local/bin/fits.sh
-  - sudo wget -q -O /etc/ImageMagick-6/policy.xml https://raw.githubusercontent.com/marriott-library/newspaper_works/7052ff3bf58022572870a0720d8c5a705090a833/config/vendor/imagemagick-6-policy.xml
+  - sudo wget -q -O /etc/ImageMagick-6/policy.xml https://raw.githubusercontent.com/marriott-library/newspaper_works/b74ef957892aab9a4b8cf4196a851db9cf810350/config/vendor/imagemagick-6-policy.xml
   - sudo wget -q -O /opt/install/fits-1.4.1/xml/fits.xml https://gist.githubusercontent.com/brianmcbride/af3fb21fb50a1331d84eca9a9a170f8f/raw/ebb1a285726e4f5c2309b4f6eceed29fa1369538/fits.xml
 rvm:
   - 2.5.5
