--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ cache:
 before_install:
   - sudo apt-get update -q
   - gem update --system
-  - gem install bundler
+  - gem install -v 1.17.2 bundler --no-rdoc --no-ri
   - google-chrome-stable --headless --disable-gpu --no-sandbox --remote-debugging-port=9222 http://localhost &
   - sudo wget -P /opt/install https://brussels.lib.utah.edu/FITS/fits-1.4.1.zip
   - sudo unzip /opt/install/fits-1.4.1.zip -d /opt/install/fits-1.4.1
@@ -44,7 +44,7 @@ env:
   # It should be sufficient to test only the latest of the patch versions for a minor version, they
   # should be compatible across patch versions (only bug fixes are released in patch versions).
   matrix:
-    - "RAILS_VERSION=5.1.7"
+    - "RAILS_VERSION=5.2.2"
 
 services:
   - redis
