--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,7 +1,10 @@
 inherit_gem:
   bixby: bixby_default.yml
 
-RSpec/ExampleLength:
+Style/FrozenStringLiteralComment:
+  Enabled: false
+
+RSpec/LayoutLineLength:
   Max: 15
   Exclude:
     - 'spec/lib/newspaper_works/data/work_derivatives_spec.rb'
