--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ cache:
   bundler: true
 
 before_script:
-  - redis-cli /etc/redis/redis.conf --port 8985
+  - redis-server /etc/redis/redis.conf --port 8985
 
 before_install:
   - sudo apt-get update -q
