--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ addons:
 cache:
   bundler: true
 
-before_script:
-  - sudo redis-server /etc/redis/redis.conf --port 8985
+  # before_script:
+  # - sudo redis-server /etc/redis/redis.conf --port 8985
 
 before_install:
   - sudo apt-get update -q
